--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-python-server/src/AI/models/*.joblib filter=lfs diff=lfs merge=lfs -text
-python-server/src/AI/models/*.h5 filter=lfs diff=lfs merge=lfs -text
+python-server/models/*.joblib filter=lfs diff=lfs merge=lfs -text
+python-server/models/*.h5 filter=lfs diff=lfs merge=lfs -text
