--- a/python-server/requirements.txt
+++ b/python-server/requirements.txt
@@ -1,10 +1,10 @@
+# Requirements for the Python server
 Flask==3.1.2
 joblib==1.5.3
-keras==3.12.0
-numpy==2.4.1
+numpy>=1.26,<2.3
 Pillow==12.1.0
 python-dotenv==1.2.1
-Requests==2.32.5
-scikit_learn==1.8.0
-streamlit==1.53.1
+requests==2.32.5
+scikit-learn==1.7.2
+scipy>=1.11,<1.14
 tensorflow==2.20.0
